Style the dropdown to avoid overflow on small screens

--- a/assets/css/typeahead.css
+++ b/assets/css/typeahead.css
@@ -4,11 +4,12 @@
  * See: https://github.com/bassjobsen/typeahead.js-bootstrap4-css 
  */
 
-span.twitter-typeahead .tt-menu {
+ span.twitter-typeahead .tt-menu {
   cursor: pointer;
 }
 
 .dropdown-menu, span.twitter-typeahead .tt-menu {
+  width: 100%;
   position: absolute;
   top: 100%;
   left: 0;
@@ -25,10 +26,12 @@ span.twitter-typeahead .tt-menu {
   background-color: #fff;
   background-clip: padding-box;
   border: 1px solid rgba(0, 0, 0, 0.15);
-  border-radius: 0.25rem; }
+  border-radius: 0.25rem;
+}
 
 span.twitter-typeahead .tt-suggestion {
   display: block;
+  overflow: hidden;
   width: 100%;
   padding: 3px 20px;
   clear: both;
@@ -38,27 +41,35 @@ span.twitter-typeahead .tt-suggestion {
   text-align: inherit;
   white-space: nowrap;
   background: none;
-  border: 0; }
+  border: 0; 
+}
 span.twitter-typeahead .tt-suggestion:focus, .dropdown-item:hover, span.twitter-typeahead .tt-suggestion:hover {
-    color: #2b2d2f;
-    text-decoration: none;
-    background-color: #f5f5f5; }
+  color: #2b2d2f;
+  text-decoration: none;
+  background-color: #f5f5f5; 
+}
 span.twitter-typeahead .active.tt-suggestion, span.twitter-typeahead .tt-suggestion.tt-cursor, span.twitter-typeahead .active.tt-suggestion:focus, span.twitter-typeahead .tt-suggestion.tt-cursor:focus, span.twitter-typeahead .active.tt-suggestion:hover, span.twitter-typeahead .tt-suggestion.tt-cursor:hover {
-    color: #fff;
-    text-decoration: none;
-    background-color: #0275d8;
-    outline: 0; }
+  color: #fff;
+  text-decoration: none;
+  background-color: #0275d8;
+  outline: 0;
+}
 span.twitter-typeahead .disabled.tt-suggestion, span.twitter-typeahead .disabled.tt-suggestion:focus, span.twitter-typeahead .disabled.tt-suggestion:hover {
-    color: #818a91; }
+  color: #818a91; 
+}
 span.twitter-typeahead .disabled.tt-suggestion:focus, span.twitter-typeahead .disabled.tt-suggestion:hover {
-    text-decoration: none;
-    cursor: not-allowed;
-    background-color: transparent;
-    background-image: none;
-    filter: "progid:DXImageTransform.Microsoft.gradient(enabled = false)"; }
+  text-decoration: none;
+  cursor: not-allowed;
+  background-color: transparent;
+  background-image: none;
+  filter: "progid:DXImageTransform.Microsoft.gradient(enabled = false)"; 
+}
 span.twitter-typeahead {
-  width: 100%; }
-  .input-group span.twitter-typeahead {
-    display: block !important; }
-    .input-group span.twitter-typeahead .tt-menu {
-      top: 2.375rem !important; }
+  width: 100%; 
+}
+.input-group span.twitter-typeahead {
+  display: block !important; 
+}
+.input-group span.twitter-typeahead .tt-menu {
+  top: 2.375rem !important; 
+}
